# kernels

./: .gitignore  README.md  main.py  pyproject.toml
data/owt/: prepare_data.ipynb
data/owt/raw/: download.sh
notebooks/: scaling_laws.ipynb  triton_model.ipynb
src/kernels/: data.py  decode.py  inference.py  init.py  train.py  transformer.py  util.py
src/kernels/attention/: flash_attention.py
src/kernels/cli/benchmark/: attention.py  norm.py
src/kernels/matmul/: triton.py
src/kernels/pytorch/: activation.py  attention.py  cross_entropy.py  norm.py  rotary.py
src/kernels/triton/: activation.py  attention.py  cross_entropy.py  linear.py  matmul.py  norm.py  rotary.py  transformer.py
tests/pytorch/: conftest.py  test_attention.py
tests/triton/: test_activation.py  test_attention.py  test_cross_entropy.py  test_linear.py  test_matmul.py  test_norm.py  test_rotary.py
