[project]
name = "kernels"
version = "0.1.0"
description = "Kernel library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einx>=0.3.0",
    "hypothesis-torch>=2.0.4",
    "jaxtyping>=0.3.2",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "typer>=0.19.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
